# accumulator

./: Cargo.toml  readme.md
benches/: acc.rs  poly.rs
src/: accumulate.rs  hash_to_field.rs  lib.rs  main.rs  param.rs  poly.rs
src/tests/: accumulate.rs  mod.rs  poly.rs
