[package]
name = "accumulator"
version = "0.1.0"
description = "A rust implementation of pairing based accumulator over BLS12-381 curve"
authors = ["zhenfei <zhenfei.zhang@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
  ff = { git = "https://github.com/algorand/ff"}
  pairing-plus = { git = "https://github.com/algorand/pairing-plus"}
  sha2 = "0.8"
  bigint = { version = "4", default-features = false }

[dev-dependencies]
  bencher = "0.1.5"
  criterion = "0.2.11"
  rand = "0.5"
  rand_core = ""
  rand_xorshift = ""

[[bench]]
  name = "poly"
  harness = false
